Cleaned node.js example

--- a/examples/node.js/package.json
+++ b/examples/node.js/package.json
@@ -12,6 +12,7 @@
     "simple-oauth2": "~0.1.8",
     "express": "~3.4.7",
     "request": "~2.31.0",
-    "cline": "~0.7.0"
+    "cline": "~0.7.0",
+    "open": "0.0.4"
   }
 }
