--- a/examples/public_socket.js/package.json
+++ b/examples/public_socket.js/package.json
@@ -9,6 +9,6 @@
   "author": "Paymium",
   "license": "MIT",
   "dependencies": {
-    "socket.io-client": "^0.9.16"
+    "socket.io-client": "1.3.x"
   }
 }
